--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.datasource.url = jdbc:mysql://localhost:3306/katacrud?serverTimezone=UTC
+spring.datasource.username=edwinCasallas
+spring.datasource.password=Casallas22.
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+spring.jpa.hibernate.ddl-auto=create
