--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.datasource.username=edwinCasallas
 spring.datasource.password=Casallas22.
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
